fix: fix overlay overflow-x

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-  @apply m-0 min-w-[320px] min-h-screen overflow-x-hidden bg-background;
+  @apply m-0 min-w-[320px] min-h-screen bg-background;
 }
 
 #app {
